# python-mysdk

./: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.rst  openstack-common.conf  requirements.txt  setup.cfg
doc/source/: conf.py  index.rst  installation.rst  usage.rst
mysdk/: __init__.py
mysdk/api/: identity.py
mysdk/tests/: test_mysdk.py
